August 3 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* SecretKnowledge's defence part now shows block info
	* Player can no longer eat scrolls, silver stones etc.
	* Eating is no more fatal

August 3 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* CanBeSeen and IsVisible systems merged together to CanBeSeen.
	* Added a lot of consts
	* Mine and bear trap pretty much recoded.

August 3 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Blocking is no longer possible when fainted
	* Shields now affect RelativeDanger
	* Blocking now increases weapon skills
	* Added SHIELDS weapon skill category
	* Added more parameters for hit effects
	* Hit effects of gauntlets and boots now work
	* Added system for special unarmed and kick effects
	* Some S&R done:
	  * SingleWeaponSkill -> SWeaponSkill
	  * CategoryWeaponSkill -> CWeaponSkill
	  * gweaponskill -> cweaponskill (where the dev/null did that g come from?)
	* Single weapon skill is now removed correctly when an arm is severed

July 31 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added whip of Calamus
	* Tweaked items thrown at doors
	* Possibly something else (sorry. Bad commit)

July 30 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Mistress hair color now depends on configuration
	* All orc configurations look different
	* Orc's article is now correct

July 30 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Hostile and neutral NPCs no longer forget weapon skills like the player and
	  his team
	* Corrected a lot of warnings given by the gcc compilation
	* Gauntlets and boots now increase unarmed and kicking damage, respectively
	* The AI now fights invisible enemies correctly if they have attacked first and
	  have not moved anywhere
	* DodgeValue is now doubled if the hitter can't see the dodger
	* ToHitValue is likewise multiplied by two if the hitter is invisible to the
	  dodger
	* Added poison material that has an effect of activating the poisoned state
	* RestoreBodyParts() doesn't crash anymore, I think