@@ -11,7 +11,9 @@
 
 namespace festring
 {
-  extern char Buffer[];
+  void InstallIntegerMap();
+  void DeInstallIntegerMap();
+  char* IntegerToChar(long);
 
   inline std::string& Capitalize(std::string& String)
   {
@@ -24,16 +26,16 @@ namespace festring
   inline std::string CapitalizeCopy(std::string String) { return Capitalize(String); }
 }
 
-inline std::string operator+(std::string String, short Int) { return String.append(itoa(Int, festring::Buffer, 10)); }
-inline std::string operator+(std::string String, ushort Int) { return String.append(itoa(Int, festring::Buffer, 10)); }
-inline std::string operator+(std::string String, int Int) { return String.append(itoa(Int, festring::Buffer, 10)); }
-inline std::string operator+(std::string String, long Int) { return String.append(itoa(Int, festring::Buffer, 10)); }
-inline std::string operator+(std::string String, ulong Int) { return String.append(itoa(Int, festring::Buffer, 10)); }
-inline std::string& operator+=(std::string& String, short Int) { return String.append(itoa(Int, festring::Buffer, 10)); }
-inline std::string& operator+=(std::string& String, ushort Int) { return String.append(itoa(Int, festring::Buffer, 10)); }
-inline std::string& operator+=(std::string& String, int Int) { return String.append(itoa(Int, festring::Buffer, 10)); }
-inline std::string& operator+=(std::string& String, long Int) { return String.append(itoa(Int, festring::Buffer, 10)); }
-inline std::string& operator+=(std::string& String, ulong Int) { return String.append(itoa(Int, festring::Buffer, 10)); }
+inline std::string operator+(std::string String, short Int) { return String.append(festring::IntegerToChar(Int)); }
+inline std::string operator+(std::string String, ushort Int) { return String.append(festring::IntegerToChar(Int)); }
+inline std::string operator+(std::string String, int Int) { return String.append(festring::IntegerToChar(Int)); }
+inline std::string operator+(std::string String, long Int) { return String.append(festring::IntegerToChar(Int)); }
+inline std::string operator+(std::string String, ulong Int) { return String.append(festring::IntegerToChar(Int)); }
+inline std::string& operator+=(std::string& String, short Int) { return String.append(festring::IntegerToChar(Int)); }
+inline std::string& operator+=(std::string& String, ushort Int) { return String.append(festring::IntegerToChar(Int)); }
+inline std::string& operator+=(std::string& String, int Int) { return String.append(festring::IntegerToChar(Int)); }
+inline std::string& operator+=(std::string& String, long Int) { return String.append(festring::IntegerToChar(Int)); }
+inline std::string& operator+=(std::string& String, ulong Int) { return String.append(festring::IntegerToChar(Int)); }
 inline std::string operator+(const char* const CString, std::string CppString) { return CppString.insert(0, CString); }
 template <class type> inline std::string& operator<<(std::string& String, const type& Type) { return String += Type; }
 
