@@ -375,7 +375,7 @@ material
 
 	Config COPPER;
 	{
-		StrengthValue = 60;
+		StrengthValue = 70;
 		ConsumeType = METAL;
 		Density = 9000; /* rounded from 8920 */
 		OfferModifier = 10;
